@@ -21,6 +21,7 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.EnumSet;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.LinkedHashMap;
@@ -28,7 +29,9 @@ import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Set;
 import java.util.function.BooleanSupplier;
+import java.util.function.Consumer;
 import java.util.function.DoubleSupplier;
 import java.util.function.Function;
 import java.util.function.IntSupplier;
@@ -38,10 +41,12 @@ import java.util.function.Supplier;
 import java.util.stream.Collectors;
 import net.neoforged.fml.Logging;
 import net.neoforged.fml.config.IConfigSpec;
+import net.neoforged.fml.config.ModConfig;
 import net.neoforged.fml.loading.FMLEnvironment;
 import org.apache.commons.lang3.tuple.Pair;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
+import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.Nullable;
 
 /*
@@ -104,6 +109,7 @@ public class ModConfigSpec implements IConfigSpec {
         return levelTranslationKeys.get(path);
     }
 
+    @Override
     public void acceptConfig(@Nullable ILoadedConfig config) {
         this.loadedConfig = config;
         if (config != null && !isCorrect(config.config())) {
@@ -119,6 +125,16 @@ public class ModConfigSpec implements IConfigSpec {
         this.afterReload();
     }
 
+    @Override
+    public void validateSpec(ModConfig config) {
+        forEachValue(getValues().valueMap().values(), configValue -> {
+            if (!configValue.getSpec().restartType().isValid(config.getType())) {
+                throw new IllegalArgumentException("Configuration value " + String.join(".", configValue.getPath())
+                        + " defined in config " + config.getFileName() + " has restart of type " + configValue.getSpec().restartType() + " which cannot be used for configs of type " + config.getType());
+            }
+        });
+    }
+
     public boolean isLoaded() {
         return loadedConfig != null;
     }
@@ -131,16 +147,26 @@ public class ModConfigSpec implements IConfigSpec {
         return this.values;
     }
 
-    public void afterReload() {
-        this.resetCaches(getValues().valueMap().values());
-    }
-
-    private void resetCaches(final Iterable<Object> configValues) {
+    private void forEachValue(Iterable<Object> configValues, Consumer<ConfigValue<?>> consumer) {
         configValues.forEach(value -> {
             if (value instanceof ConfigValue<?> configValue) {
-                configValue.clearCache();
+                consumer.accept(configValue);
             } else if (value instanceof Config innerConfig) {
-                this.resetCaches(innerConfig.valueMap().values());
+                forEachValue(innerConfig.valueMap().values(), consumer);
+            }
+        });
+    }
+
+    public void afterReload() {
+        // Only clear the caches of configs that don't need a restart
+        this.resetCaches(RestartType.NONE);
+    }
+
+    @ApiStatus.Internal
+    public void resetCaches(RestartType restartType) {
+        forEachValue(getValues().valueMap().values(), configValue -> {
+            if (configValue.getSpec().restartType == restartType) {
+                configValue.clearCache();
             }
         });
     }
@@ -359,63 +385,244 @@ public class ModConfigSpec implements IConfigSpec {
             return define(path, defaultSupplier, acceptableValues::contains);
         }
 
+        /**
+         * See {@link #defineList(List, Supplier, Supplier, Predicate)} for details.<p>
+         * 
+         * This variant takes its key as a string and splits it on ".".<br>
+         * This variant takes its default value directly and wraps it in a supplier.<br>
+         * This variant has no supplier for new elements, so no new elements can be added in the config UI.
+         * 
+         * @deprecated Use {@link #defineList(String, List, Supplier, Predicate)}
+         */
+        @Deprecated
         public <T> ConfigValue<List<? extends T>> defineList(String path, List<? extends T> defaultValue, Predicate<Object> elementValidator) {
             return defineList(split(path), defaultValue, elementValidator);
         }
 
+        /**
+         * See {@link #defineList(List, Supplier, Supplier, Predicate)} for details.<p>
+         * 
+         * This variant takes its key as a string and splits it on ".".<br>
+         * This variant takes its default value directly and wraps it in a supplier.
+         * 
+         */
+        public <T> ConfigValue<List<? extends T>> defineList(String path, List<? extends T> defaultValue, Supplier<T> newElementSupplier, Predicate<Object> elementValidator) {
+            return defineList(split(path), defaultValue, newElementSupplier, elementValidator);
+        }
+
+        /**
+         * See {@link #defineList(List, Supplier, Supplier, Predicate)} for details.<p>
+         * 
+         * This variant takes its key as a string and splits it on ".".<br>
+         * This variant has no supplier for new elements, so no new elements can be added in the config UI.
+         * 
+         * @deprecated Use {@link #defineList(String, Supplier, Supplier, Predicate)}
+         */
+        @Deprecated
         public <T> ConfigValue<List<? extends T>> defineList(String path, Supplier<List<? extends T>> defaultSupplier, Predicate<Object> elementValidator) {
             return defineList(split(path), defaultSupplier, elementValidator);
         }
 
+        /**
+         * See {@link #defineList(List, Supplier, Supplier, Predicate)} for details.<p>
+         * 
+         * This variant takes its key as a string and splits it on ".".
+         * 
+         */
+        public <T> ConfigValue<List<? extends T>> defineList(String path, Supplier<List<? extends T>> defaultSupplier, Supplier<T> newElementSupplier, Predicate<Object> elementValidator) {
+            return defineList(split(path), defaultSupplier, newElementSupplier, elementValidator);
+        }
+
+        /**
+         * See {@link #defineList(List, Supplier, Supplier, Predicate)} for details.<p>
+         * 
+         * This variant takes its default value directly and wraps it in a supplier.<br>
+         * This variant has no supplier for new elements, so no new elements can be added in the config UI.
+         * 
+         * @deprecated Use {@link #defineList(List, List, Supplier, Predicate)}
+         */
+        @Deprecated
         public <T> ConfigValue<List<? extends T>> defineList(List<String> path, List<? extends T> defaultValue, Predicate<Object> elementValidator) {
             return defineList(path, () -> defaultValue, elementValidator);
         }
 
-        public <T> ConfigValue<List<? extends T>> defineList(List<String> path, Supplier<List<? extends T>> defaultSupplier, Predicate<Object> elementValidator) {
-            context.setClazz(List.class);
-            return define(path, new ValueSpec(defaultSupplier, x -> x instanceof List && ((List<?>) x).stream().allMatch(elementValidator), context, path) {
-                @Override
-                public Object correct(Object value) {
-                    if (!(value instanceof List<?> currentList) || currentList.isEmpty()) {
-                        LOGGER.debug(Logging.CORE, "List on key {} is deemed to need correction. It is null, not a list, or an empty list. Modders, consider defineListAllowEmpty?", path.get(path.size() - 1));
-                        return getDefault();
-                    }
-                    List<?> list = Lists.newArrayList(currentList);
-                    list.removeIf(elementValidator.negate());
-                    if (list.isEmpty()) {
-                        LOGGER.debug(Logging.CORE, "List on key {} is deemed to need correction. It failed validation.", path.get(path.size() - 1));
-                        return getDefault();
-                    }
-                    return list;
-                }
-            }, defaultSupplier);
+        /**
+         * See {@link #defineList(List, Supplier, Supplier, Predicate)} for details.<p>
+         * 
+         * This variant takes its default value directly and wraps it in a supplier.
+         * 
+         */
+        public <T> ConfigValue<List<? extends T>> defineList(List<String> path, List<? extends T> defaultValue, Supplier<T> newElementSupplier, Predicate<Object> elementValidator) {
+            return defineList(path, () -> defaultValue, newElementSupplier, elementValidator);
         }
 
+        /**
+         * See {@link #defineList(List, Supplier, Supplier, Predicate)} for details.<p>
+         * 
+         * This variant has no supplier for new elements, so no new elements can be added in the config UI.
+         * 
+         * @deprecated Use {@link #defineList(List, Supplier, Supplier, Predicate)}
+         */
+        @Deprecated
+        public <T> ConfigValue<List<? extends T>> defineList(List<String> path, Supplier<List<? extends T>> defaultSupplier, Predicate<Object> elementValidator) {
+            return defineList(path, defaultSupplier, null, elementValidator);
+        }
+
+        /**
+         * Build a new config value that holds a {@link List}.<p>
+         * 
+         * This list cannot be empty. See also {@link #defineList(List, Supplier, Supplier, Predicate, Range)} for more control over the list size.
+         * 
+         * @param <T>                The class of element of the list. Directly supported are {@link String}, {@link Boolean}, {@link Integer}, {@link Long} and {@link Double}.
+         *                           Other classes will be saved using their string representation and will be read back from the config file as strings.
+         * @param path               The key for the config value in list form, i.e. pre-split into section and key.
+         * @param defaultSupplier    A {@link Supplier} for the default value of the list. This will be used if the config file doesn't exist or if it reads as invalid.
+         * @param newElementSupplier A {@link Supplier} for new elements to be added to the list. This is only used in the UI when the user presses the "add" button.
+         *                           The supplied value doesn't have to validate as correct, but it should provide a good starting point for the user to make it correct.
+         *                           If this parameter is null, there will be no "add" button in the UI (if the default UI is used).
+         * @param elementValidator   A {@link Predicate} to verify if a list element is valid. Elements that are read from the config file are removed from the list if the
+         *                           validator rejects them.
+         * @return A {@link ConfigValue} object that can be used to access the config value and that will live-update if the value changed, i.e. because the config file
+         *         was updated or the config UI was used.
+         */
+        public <T> ConfigValue<List<? extends T>> defineList(List<String> path, Supplier<List<? extends T>> defaultSupplier, Supplier<T> newElementSupplier, Predicate<Object> elementValidator) {
+            return defineList(path, defaultSupplier, newElementSupplier, elementValidator, new Range<Integer>(Integer.class, 1, Integer.MAX_VALUE));
+        }
+
+        /**
+         * See {@link #defineListAllowEmpty(List, Supplier, Supplier, Predicate)} for details.<p>
+         * 
+         * This variant takes its key as a string and splits it on ".".<br>
+         * This variant takes its default value directly and wraps it in a supplier.<br>
+         * This variant has no supplier for new elements, so no new elements can be added in the config UI.
+         * 
+         * @deprecated Use {@link #defineListAllowEmpty(String, List, Supplier, Predicate)}
+         */
+        @Deprecated
         public <T> ConfigValue<List<? extends T>> defineListAllowEmpty(String path, List<? extends T> defaultValue, Predicate<Object> elementValidator) {
             return defineListAllowEmpty(split(path), defaultValue, elementValidator);
         }
 
+        /**
+         * See {@link #defineListAllowEmpty(List, Supplier, Supplier, Predicate)} for details.<p>
+         * 
+         * This variant takes its key as a string and splits it on ".".<br>
+         * This variant takes its default value directly and wraps it in a supplier.
+         * 
+         */
+        public <T> ConfigValue<List<? extends T>> defineListAllowEmpty(String path, List<? extends T> defaultValue, Supplier<T> newElementSupplier, Predicate<Object> elementValidator) {
+            return defineListAllowEmpty(split(path), defaultValue, newElementSupplier, elementValidator);
+        }
+
+        /**
+         * See {@link #defineListAllowEmpty(List, Supplier, Supplier, Predicate)} for details.<p>
+         * 
+         * This variant takes its key as a string and splits it on ".".<br>
+         * This variant has no supplier for new elements, so no new elements can be added in the config UI.
+         * 
+         * @deprecated Use {@link #defineListAllowEmpty(String, Supplier, Supplier, Predicate)}
+         */
+        @Deprecated
         public <T> ConfigValue<List<? extends T>> defineListAllowEmpty(String path, Supplier<List<? extends T>> defaultSupplier, Predicate<Object> elementValidator) {
             return defineListAllowEmpty(split(path), defaultSupplier, elementValidator);
         }
 
+        /**
+         * See {@link #defineListAllowEmpty(List, Supplier, Supplier, Predicate)} for details.<p>
+         * 
+         * This variant takes its key as a string and splits it on ".".
+         * 
+         */
+        public <T> ConfigValue<List<? extends T>> defineListAllowEmpty(String path, Supplier<List<? extends T>> defaultSupplier, Supplier<T> newElementSupplier, Predicate<Object> elementValidator) {
+            return defineListAllowEmpty(split(path), defaultSupplier, newElementSupplier, elementValidator);
+        }
+
+        /**
+         * See {@link #defineListAllowEmpty(List, Supplier, Supplier, Predicate)} for details.<p>
+         * 
+         * This variant takes its default value directly and wraps it in a supplier.<br>
+         * This variant has no supplier for new elements, so no new elements can be added in the config UI.
+         * 
+         * @deprecated Use {@link #defineListAllowEmpty(List, List, Supplier, Predicate)}
+         */
+        @Deprecated
         public <T> ConfigValue<List<? extends T>> defineListAllowEmpty(List<String> path, List<? extends T> defaultValue, Predicate<Object> elementValidator) {
             return defineListAllowEmpty(path, () -> defaultValue, elementValidator);
         }
 
+        /**
+         * See {@link #defineListAllowEmpty(List, Supplier, Supplier, Predicate)} for details.<p>
+         * 
+         * This variant takes its default value directly and wraps it in a supplier.
+         * 
+         */
+        public <T> ConfigValue<List<? extends T>> defineListAllowEmpty(List<String> path, List<? extends T> defaultValue, Supplier<T> newElementSupplier, Predicate<Object> elementValidator) {
+            return defineListAllowEmpty(path, () -> defaultValue, newElementSupplier, elementValidator);
+        }
+
+        /**
+         * See {@link #defineListAllowEmpty(List, Supplier, Supplier, Predicate)} for details.<p>
+         * 
+         * This variant has no supplier for new elements, so no new elements can be added in the config UI.
+         * 
+         * @deprecated Use {@link #defineListAllowEmpty(List, Supplier, Supplier, Predicate)}
+         */
+        @Deprecated
         public <T> ConfigValue<List<? extends T>> defineListAllowEmpty(List<String> path, Supplier<List<? extends T>> defaultSupplier, Predicate<Object> elementValidator) {
+            return defineListAllowEmpty(path, defaultSupplier, null, elementValidator);
+        }
+
+        /**
+         * Build a new config value that holds a {@link List}.<p>
+         * 
+         * This list can be empty. See also {@link #defineList(List, Supplier, Supplier, Predicate, Range)} for more control over the list size.
+         * 
+         * @param <T>                The class of element of the list. Directly supported are {@link String}, {@link Boolean}, {@link Integer}, {@link Long} and {@link Double}.
+         *                           Other classes will be saved using their string representation and will be read back from the config file as strings.
+         * @param path               The key for the config value in list form, i.e. pre-split into section and key.
+         * @param defaultSupplier    A {@link Supplier} for the default value of the list. This will be used if the config file doesn't exist or if it reads as invalid.
+         * @param newElementSupplier A {@link Supplier} for new elements to be added to the list. This is only used in the UI when the user presses the "add" button.
+         *                           The supplied value doesn't have to validate as correct, but it should provide a good starting point for the user to make it correct.
+         *                           If this parameter is null, there will be no "add" button in the UI (if the default UI is used).
+         * @param elementValidator   A {@link Predicate} to verify if a list element is valid. Elements that are read from the config file are removed from the list if the
+         *                           validator rejects them.
+         * @return A {@link ConfigValue} object that can be used to access the config value and that will live-update if the value changed, i.e. because the config file
+         *         was updated or the config UI was used.
+         */
+        public <T> ConfigValue<List<? extends T>> defineListAllowEmpty(List<String> path, Supplier<List<? extends T>> defaultSupplier, Supplier<T> newElementSupplier, Predicate<Object> elementValidator) {
+            return defineList(path, defaultSupplier, newElementSupplier, elementValidator, null);
+        }
+
+        /**
+         * Build a new config value that holds a {@link List}.<p>
+         * 
+         * @param <T>                The class of element of the list. Directly supported are {@link String}, {@link Boolean}, {@link Integer}, {@link Long} and {@link Double}.
+         *                           Other classes will be saved using their string representation and will be read back from the config file as strings.
+         * @param path               The key for the config value in list form, i.e. pre-split into section and key.
+         * @param defaultSupplier    A {@link Supplier} for the default value of the list. This will be used if the config file doesn't exist or if it reads as invalid.
+         * @param newElementSupplier A {@link Supplier} for new elements to be added to the list. This is only used in the UI when the user presses the "add" button.
+         *                           The supplied value doesn't have to validate as correct, but it should provide a good starting point for the user to make it correct.
+         *                           If this parameter is null, there will be no "add" button in the UI (if the default UI is used).
+         * @param elementValidator   A {@link Predicate} to verify if a list element is valid. Elements that are read from the config file are removed from the list if the
+         *                           validator rejects them.
+         * @param sizeRange          A {@link Range} defining the valid length of the list. Lists read from the config file that don't validate with this Range will be replaced
+         *                           with the default.
+         * @return A {@link ConfigValue} object that can be used to access the config value and that will live-update if the value changed, i.e. because the config file
+         *         was updated or the config UI was used.
+         */
+        public <T> ConfigValue<List<? extends T>> defineList(List<String> path, Supplier<List<? extends T>> defaultSupplier, @Nullable Supplier<T> newElementSupplier, Predicate<Object> elementValidator, Range<Integer> sizeRange) {
             context.setClazz(List.class);
-            return define(path, new ValueSpec(defaultSupplier, x -> x instanceof List && ((List<?>) x).stream().allMatch(elementValidator), context, path) {
+            return define(path, new ListValueSpec(defaultSupplier, newElementSupplier, x -> x instanceof List && ((List<?>) x).stream().allMatch(elementValidator), elementValidator, context, path, sizeRange) {
                 @Override
-                public Object correct(@Nullable Object value) {
-                    if (!(value instanceof List)) {
-                        LOGGER.debug(Logging.CORE, "List on key {} is deemed to need correction, as it is null or not a list.", path.get(path.size() - 1));
+                public Object correct(Object value) {
+                    if (!(value instanceof List) || (getSizeRange() != null && !getSizeRange().test(((List<?>) value).size()))) {
+                        LOGGER.debug(Logging.CORE, "List on key {} is deemed to need correction, as it is null, not a list, or the wrong size.", path.getLast());
                         return getDefault();
                     }
                     List<?> list = Lists.newArrayList((List<?>) value);
                     list.removeIf(elementValidator.negate());
                     if (list.isEmpty()) {
-                        LOGGER.debug(Logging.CORE, "List on key {} is deemed to need correction. It failed validation.", path.get(path.size() - 1));
+                        LOGGER.debug(Logging.CORE, "List on key {} is deemed to need correction. It failed validation.", path.getLast());
                         return getDefault();
                     }
                     return list;
@@ -616,8 +823,20 @@ public class ModConfigSpec implements IConfigSpec {
             return this;
         }
 
+        /**
+         * Config values marked as needing a world restart will not reset their {@linkplain ConfigValue#get() cached value} until they are unloaded
+         * (i.e. when a world is closed).
+         */
         public Builder worldRestart() {
             context.worldRestart();
+            return this;
+        }
+
+        /**
+         * Config values marked as needing a game restart will never reset their {@linkplain ConfigValue#get() cached value}.
+         */
+        public Builder gameRestart() {
+            context.gameRestart();
             return this;
         }
 
@@ -673,7 +892,7 @@ public class ModConfigSpec implements IConfigSpec {
         private String langKey;
         @Nullable
         private Range<?> range;
-        private boolean worldRestart = false;
+        private RestartType restartType = RestartType.NONE;
         @Nullable
         private Class<?> clazz;
 
@@ -731,11 +950,15 @@ public class ModConfigSpec implements IConfigSpec {
         }
 
         public void worldRestart() {
-            this.worldRestart = true;
+            this.restartType = RestartType.WORLD;
         }
 
-        public boolean needsWorldRestart() {
-            return this.worldRestart;
+        public void gameRestart() {
+            this.restartType = RestartType.GAME;
+        }
+
+        public RestartType restartType() {
+            return restartType;
         }
 
         public void setClazz(Class<?> clazz) {
@@ -751,7 +974,7 @@ public class ModConfigSpec implements IConfigSpec {
             validate(hasComment(), "Non-empty comment when empty expected");
             validate(langKey, "Non-null translation key when null expected");
             validate(range, "Non-null range when null expected");
-            validate(worldRestart, "Dangeling world restart value set to true");
+            validate(restartType != RestartType.NONE, "Dangling restart value set to " + restartType);
         }
 
         private void validate(@Nullable Object value, String message) {
@@ -843,11 +1066,11 @@ public class ModConfigSpec implements IConfigSpec {
         private final String langKey;
         @Nullable
         private final Range<?> range;
-        private final boolean worldRestart;
         @Nullable
         private final Class<?> clazz;
         private final Supplier<?> supplier;
         private final Predicate<Object> validator;
+        private final RestartType restartType;
 
         private ValueSpec(Supplier<?> supplier, Predicate<Object> validator, BuilderContext context, List<String> path) {
             Objects.requireNonNull(supplier, "Default supplier can not be null");
@@ -856,7 +1079,7 @@ public class ModConfigSpec implements IConfigSpec {
             this.comment = context.hasComment() ? context.buildComment(path) : null;
             this.langKey = context.getTranslationKey();
             this.range = context.getRange();
-            this.worldRestart = context.needsWorldRestart();
+            this.restartType = context.restartType();
             this.clazz = context.getClazz();
             this.supplier = supplier;
             this.validator = validator;
@@ -878,8 +1101,8 @@ public class ModConfigSpec implements IConfigSpec {
             return (Range<V>) this.range;
         }
 
-        public boolean needsWorldRestart() {
-            return this.worldRestart;
+        public RestartType restartType() {
+            return restartType;
         }
 
         @Nullable
@@ -897,6 +1120,59 @@ public class ModConfigSpec implements IConfigSpec {
 
         public Object getDefault() {
             return supplier.get();
+        }
+    }
+
+    public static class ListValueSpec extends ValueSpec {
+        private static final Range<Integer> MAX_ELEMENTS = new Range<>(Integer.class, 0, Integer.MAX_VALUE);
+
+        @Nullable
+        private final Supplier<?> newElementSupplier;
+        @Nullable
+        private final Range<Integer> sizeRange;
+        private final Predicate<Object> elementValidator;
+
+        private ListValueSpec(Supplier<?> supplier, @Nullable Supplier<?> newElementSupplier, Predicate<Object> listValidator, Predicate<Object> elementValidator, BuilderContext context, List<String> path, @Nullable Range<Integer> sizeRange) {
+            super(supplier, listValidator, context, path);
+            Objects.requireNonNull(elementValidator, "ElementValidator can not be null");
+
+            this.newElementSupplier = newElementSupplier;
+            this.elementValidator = elementValidator;
+            this.sizeRange = Objects.requireNonNullElse(sizeRange, MAX_ELEMENTS);
+        }
+
+        /**
+         * Creates a new empty element that can be added to the end of the list or null if the list doesn't support adding elements.<p>
+         * 
+         * The element does not need to validate with either {@link #test(Object)} or {@link #testElement(Object)}, but it should give the user a good starting point for their edit.<p>
+         * 
+         * Only used by the UI!
+         */
+        @Nullable
+        public Supplier<?> getNewElementSupplier() {
+            return newElementSupplier;
+        }
+
+        /**
+         * Determines if a given object can be part of the list.<p>
+         * 
+         * Note that the list-level validator overrules this.<p>
+         * 
+         * Only used by the UI!
+         */
+        public boolean testElement(Object value) {
+            return elementValidator.test(value);
+        }
+
+        /**
+         * The allowable range of the size of the list.
+         * <p>
+         * Note that the validator overrules this.
+         * <p>
+         * Only used by the UI!
+         */
+        public Range<Integer> getSizeRange() {
+            return sizeRange;
         }
     }
 
@@ -923,26 +1199,37 @@ public class ModConfigSpec implements IConfigSpec {
         }
 
         /**
-         * Returns the actual value for the configuration setting, throwing if the config has not yet been loaded.
+         * Returns the configured value for the configuration setting, throwing if the config has not yet been loaded.
+         * <p>
+         * This getter is cached, and will respect the {@link Builder#worldRestart() world restart} and {@link Builder#gameRestart() game restart}
+         * options by not clearing its cache if one of those options are set.
          *
-         * @return the actual value for the setting
+         * @return the configured value for the setting
          * @throws NullPointerException  if the {@link ModConfigSpec config spec} object that will contain this has
          *                               not yet been built
          * @throws IllegalStateException if the associated config has not yet been loaded
          */
         @Override
         public T get() {
-            Preconditions.checkNotNull(spec, "Cannot get config value before spec is built");
-            var loadedConfig = spec.loadedConfig;
-            Preconditions.checkState(loadedConfig != null, "Cannot get config value before config is loaded.");
-
             if (cachedValue == null) {
-                cachedValue = getRaw(loadedConfig.config(), path, defaultSupplier);
+                cachedValue = getRaw();
             }
             return cachedValue;
         }
 
-        protected T getRaw(Config config, List<String> path, Supplier<T> defaultSupplier) {
+        /**
+         * Returns the uncached value for the configuration setting, throwing if the config has not yet been loaded.
+         * <p>
+         * <em>Do not call this for any other purpose than editing the value. Use {@link #get()} instead.</em>
+         */
+        public T getRaw() {
+            Preconditions.checkNotNull(spec, "Cannot get config value before spec is built");
+            var loadedConfig = spec.loadedConfig;
+            Preconditions.checkState(loadedConfig != null, "Cannot get config value before config is loaded.");
+            return getRaw(loadedConfig.config(), path, defaultSupplier);
+        }
+
+        public T getRaw(Config config, List<String> path, Supplier<T> defaultSupplier) {
             return config.getOrElse(path, defaultSupplier);
         }
 
@@ -972,7 +1259,14 @@ public class ModConfigSpec implements IConfigSpec {
             var loadedConfig = spec.loadedConfig;
             Preconditions.checkNotNull(loadedConfig, "Cannot set config value without assigned Config object present");
             loadedConfig.config().set(path, value);
-            this.cachedValue = value;
+
+            if (getSpec().restartType == RestartType.NONE) {
+                this.cachedValue = value;
+            }
+        }
+
+        public ValueSpec getSpec() {
+            return parent.spec.get(path);
         }
 
         public void clearCache() {
@@ -1005,7 +1299,7 @@ public class ModConfigSpec implements IConfigSpec {
         }
 
         @Override
-        protected Integer getRaw(Config config, List<String> path, Supplier<Integer> defaultSupplier) {
+        public Integer getRaw(Config config, List<String> path, Supplier<Integer> defaultSupplier) {
             return config.getIntOrElse(path, () -> defaultSupplier.get());
         }
 
@@ -1021,7 +1315,7 @@ public class ModConfigSpec implements IConfigSpec {
         }
 
         @Override
-        protected Long getRaw(Config config, List<String> path, Supplier<Long> defaultSupplier) {
+        public Long getRaw(Config config, List<String> path, Supplier<Long> defaultSupplier) {
             return config.getLongOrElse(path, () -> defaultSupplier.get());
         }
 
@@ -1037,7 +1331,7 @@ public class ModConfigSpec implements IConfigSpec {
         }
 
         @Override
-        protected Double getRaw(Config config, List<String> path, Supplier<Double> defaultSupplier) {
+        public Double getRaw(Config config, List<String> path, Supplier<Double> defaultSupplier) {
             Number n = config.<Number>get(path);
             return n == null ? defaultSupplier.get() : n.doubleValue();
         }
@@ -1059,7 +1353,7 @@ public class ModConfigSpec implements IConfigSpec {
         }
 
         @Override
-        protected T getRaw(Config config, List<String> path, Supplier<T> defaultSupplier) {
+        public T getRaw(Config config, List<String> path, Supplier<T> defaultSupplier) {
             return config.getEnumOrElse(path, clazz, converter, defaultSupplier);
         }
     }
@@ -1070,5 +1364,40 @@ public class ModConfigSpec implements IConfigSpec {
 
     private static List<String> split(String path) {
         return Lists.newArrayList(DOT_SPLITTER.split(path));
+    }
+
+    /**
+     * Used to prevent cached config values from being updated unless the game or the world is restarted.
+     */
+    public enum RestartType {
+        /**
+         * Do not require a restart to update the cached config value.
+         */
+        NONE,
+        /**
+         * Require a world restart.
+         */
+        WORLD,
+        /**
+         * Require a game restart.
+         * <p>
+         * Cannot be used for {@linkplain ModConfig.Type#SERVER server configs}.
+         */
+        GAME(ModConfig.Type.SERVER);
+
+        private final Set<ModConfig.Type> invalidTypes;
+
+        RestartType(ModConfig.Type... invalidTypes) {
+            this.invalidTypes = EnumSet.noneOf(ModConfig.Type.class);
+            this.invalidTypes.addAll(Arrays.asList(invalidTypes));
+        }
+
+        private boolean isValid(ModConfig.Type type) {
+            return !invalidTypes.contains(type);
+        }
+
+        public RestartType with(RestartType other) {
+            return other == NONE ? this : (other == GAME || this == GAME) ? GAME : WORLD;
+        }
     }
 }
